fix: Update swagger api docs
之前 refactor （handlers/) 時忘記更新
